# hackathon_agent

./: API_DOCUMENTATION.md  ARCHITECTURE.md  CLAUDE.md  CONVERSATION_HISTORY_FEATURES.md  DEMO_GUIDE.md  DEPLOYMENT_GUIDE.md  ENHANCED_API_DOCUMENTATION.md  ENHANCED_FEATURES.md  IDEAL_DIALOGUE_README.md  IDEAL_DIALOGUE_SCENARIO.md  MVP_README.md  SLACK_IDEAL_DIALOGUE_IMPLEMENTATION.md  llm_prompt_flow_diagram.md  prompts_documentation.md  slack_events_setup_guide.md
backend/: .env.example  ANALYSIS_AND_FIX.md  README.md  SLACK_IDEAL_DIALOGUE_DEMO_README.md  alembic.ini  demo_ideal_dialogue.py  demo_ideal_scenario.py  demo_script.py  enhanced_demo_script.py  enhanced_demo_with_history.py  ideal_interactive_demo.py  interactive_demo.py  pyproject.toml  quick_demo.py  sales_ai.db  slack_auto_demo.py  slack_demo.py  slack_dialogue_demo.py  slack_ideal_dialogue_demo.py  slack_setup_guide.py  start_server.py  test_1on1_dialogue.py  test_api_demo.py  test_basic.py  test_conversation_history.py  test_dialogue_based_concretization.py  test_dialogue_flow_fix.py  test_efficient_dialogue.py  test_enhanced_features.py  test_fixed_questions.py  test_ideal_workflow.py  test_improved_questions.py  test_new_one_on_one_system.py  test_one_on_one_detection.py  test_slack_formatting.py  test_slack_ideal_dialogue.py  test_slack_message.py  test_user_experience_fix.py
backend/alembic/: env.py
backend/alembic/versions/: 8411148cbaa8_initial_migration_for_dialogue_models.py
backend/app/: __init__.py  main.py
backend/docs/: 1on1_demo_1.md  1on1_demo_2.md  1on1_demo_3.md  README.md  admin_guide.md  analize.md  enhanced_slack_integration_guide.md  quick_start_guide.md  slack_demo.md  slack_ideal_dialogue_guide.md
backend/scripts/: seed_knowledge_base.py
(+30 files in other folders)
